Fix navbar on iPhone 4

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -102,6 +102,9 @@
     padding: 0 20px;
     flex-direction: column;
     justify-content: flex-start;
+    -webkit-transform: translateX(-260px);
+    -moz-transform: translateX(-260px);
+    -o-transform: translateX(-260px);
     transform: translateX(-260px);
     background-color: #484848;
 
@@ -309,6 +312,9 @@
 }
 
 .menu-toggled {
+  -webkit-transform: translateX(0) !important;
+  -moz-transform: translateX(0) !important;
+  -o-transform: translateX(0) !important;
   transform: translateX(0) !important;
 }
 
@@ -335,6 +341,9 @@
   z-index: 999999;
   margin: 0;
   background-color: #f45a5a; /* rouge */
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.08),0 1px 2px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.08),0 1px 2px rgba(0,0,0,0.2);
+  -o-box-shadow: 0 1px 3px rgba(0,0,0,0.08),0 1px 2px rgba(0,0,0,0.2);
   box-shadow: 0 1px 3px rgba(0,0,0,0.08),0 1px 2px rgba(0,0,0,0.2);
 
   span {
