--- a/app/assets/stylesheets/pro/_sidebar.scss
+++ b/app/assets/stylesheets/pro/_sidebar.scss
@@ -79,7 +79,6 @@
 
   li.active {
     opacity: 1;
-    border-left: 10px solid #5D8A69;
     background-color: #8BBD99;
 
     &:after {
